add landmarks profiling

--- a/bin/dune
+++ b/bin/dune
@@ -6,4 +6,7 @@
   core
   core_unix
   core_unix.filename_unix
-  core_unix.command_unix))
+  core_unix.command_unix)
+  (instrumentation
+    (backend landmarks))
+)
