--- a/lib/dune
+++ b/lib/dune
@@ -2,4 +2,7 @@
  (name camlox)
  (libraries core)
  (preprocess
-  (pps ppx_deriving.show ppx_deriving.ord)))
+  (pps ppx_deriving.show ppx_deriving.ord))
+ (instrumentation
+    (backend landmarks))
+)
